<resources>
    <string name="app_name">Journals</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_news">News</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_details">News Details</string>
    <string name="continue_on_website">Continue on Website</string>
    <string name="image_transition">news_image_transition</string>
    <string name="search_title">Search</string>
    <string name="text_size_hint">Text Size</string>
    <string name="a">A</string>
    <string name="text_style_hint">Text Style</string>
    <string name="bold">Bold</string>
    <string name="normal">Normal</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="news_image_content_description">news image</string>
    <string name="share_button_content_description">share button</string>
    <string name="adjust_font_size_content_description">adjust font size button</string>
    <string name="retry">Retry</string>
    <string name="journals">Journals</string>
    <string name="u2022">•</string>
</resources>
