<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="fontSettingsListener"
            type="com.ezz.newsapp.news.details.font_settings.FontSettingsBottomSheet.OnFontSettingsChanged"/>
        <variable
            name="fontSettings"
            type="com.ezz.newsapp.news.details.font_settings.FontSettings"/>
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/text_size_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/text_size_hint"
        android:textColor="@color/color_black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_style_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:text="@string/text_style_hint"
        android:textColor="@color/color_black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_size_hint">


        <TextView
            android:id="@+id/a_big"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="18sp"
            android:text="@string/a"
            android:textColor="@color/color_black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/a_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12sp"
            android:text="@string/a"
            android:textColor="@color/color_black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <SeekBar
            android:id="@+id/text_size_seek_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/a_big"
            app:layout_constraintStart_toEndOf="@+id/a_small"
            app:layout_constraintTop_toTopOf="parent"
            android:progress="@{fontSettings.textSizePercentage}"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/view"
        android:layout_width="387dp"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:background="@color/color_divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

    <info.hoang8f.android.segmented.SegmentedGroup xmlns:segmentedgroup="http://schemas.android.com/apk/res-auto"
        android:id="@+id/popup_aa_segment"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal"
        segmentedgroup:layout_constraintBottom_toBottomOf="parent"
        segmentedgroup:layout_constraintEnd_toEndOf="parent"
        segmentedgroup:layout_constraintStart_toStartOf="parent"
        segmentedgroup:layout_constraintTop_toBottomOf="@id/text_style_hint"
        segmentedgroup:sc_border_width="2dp"
        segmentedgroup:sc_checked_text_color="@color/white"
        segmentedgroup:sc_tint_color="@color/colorAccent"
        android:checkedButton="@{fontSettings.textStyle ? @id/popup_aa_segment_dark : @id/popup_aa_segment_light}">

        <RadioButton
            android:id="@+id/popup_aa_segment_dark"
            style="@style/RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/bold"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            app:backgroundTint="@color/colorPrimary"
            android:onCheckedChanged="@{(buttonView, isChecked) -> fontSettingsListener.onFontStyleChanged(isChecked)}"/>

        <RadioButton
            android:id="@+id/popup_aa_segment_light"
            style="@style/RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:backgroundTint="@color/colorPrimary"
            android:text="@string/normal"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp" />

    </info.hoang8f.android.segmented.SegmentedGroup>


</androidx.constraintlayout.widget.ConstraintLayout>

</layout>