<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="news"
            type="com.ezz.presentation.model.NewsUI"/>
        <variable
            name="clickListener"
            type="android.view.View.OnClickListener"/>
        <variable
            name="fontSettings"
            type="com.ezz.newsapp.news.details.font_settings.FontSettings"/>
    </data>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <ImageView
            android:id="@+id/news_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:scaleType="centerCrop"

            android:foreground="#57000000"
            android:transitionName="@string/image_transition"
            tools:targetApi="lollipop"
            app:url="@{news.imageUrl}"/>



            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">








                    <TextView
                        android:id="@+id/source_name_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxWidth="200dp"
                        android:maxLines="1"
                        android:ellipsize="end"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="15dp"
                        app:layout_constraintTop_toBottomOf="@id/description_tv"
                        android:layout_marginTop="10dp"
                        tools:text="New York Times"
                        android:textSize="15sp"
                        android:typeface="normal"
                        android:textStyle="normal"
                        android:text="@{news.sourceName}"
                        android:textColor="@color/colorWhiteFaded"/>

                    <TextView
                        android:id="@+id/date_source_sep"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        app:layout_constraintStart_toEndOf="@id/source_name_tv"
                        app:layout_constraintTop_toTopOf="@id/source_name_tv"
                        android:layout_marginStart="7dp"
                        android:layout_marginBottom="20dp"
                        android:text="\u2022"
                        android:textSize="15sp"
                        android:typeface="normal"
                        android:textStyle="bold"
                        android:textColor="@color/colorWhiteFaded"/>

                    <TextView
                        android:id="@+id/date_tv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:ellipsize="end"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/date_source_sep"
                        app:layout_constraintTop_toTopOf="@id/date_source_sep"
                        android:layout_marginStart="7dp"
                        android:layout_marginBottom="20dp"
                        tools:text="@tools:sample/date/mmddyy"
                        android:textSize="15sp"
                        android:typeface="normal"
                        android:textStyle="normal"
                        android:textColor="@color/colorWhiteFaded"/>


                    <TextView
                        android:id="@+id/title_tv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/time_tv"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/white"
                        android:layout_marginStart="15dp"
                        android:textStyle="bold"
                        android:ellipsize="end"
                        android:textSize="@{fontSettings.textSize}"
                        android:text="@{news.title}"
                        tools:text="@tools:sample/lorem/random"
                        android:maxLines="5"
                        android:layout_marginEnd="20dp"/>

                    <TextView
                        android:id="@+id/time_tv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="@id/title_tv"
                        android:layout_marginTop="300dp"
                        android:textSize="@{fontSettings.textSize}"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:ellipsize="end"
                        android:layout_marginEnd="20dp"
                        tools:text="Today"
                        app:date="@{news.publishedDate}"
                        android:textColor="@color/colorWhiteFaded"/>

                    <TextView
                        android:id="@+id/description_tv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="16dp"
                        android:textColor="@color/white"
                        android:textSize="@{fontSettings.textSize}"
                        app:typeface="@{fontSettings.textStyle}"
                        android:maxLines="10"
                        android:ellipsize="end"
                        tools:text="@tools:sample/lorem/random"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/title_tv"
                        android:text="@{news.description}"/>

                    <TextView
                        android:id="@+id/content_tv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="15dp"
                        android:textSize="@{fontSettings.textSize}"
                        app:typeface="@{fontSettings.textStyle}"
                        tools:text="@tools:sample/lorem/random"
                        android:textColor="@color/white"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginBottom="30dp"
                        android:maxLines="10"
                        android:ellipsize="end"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/source_name_tv"
                        android:text="@{news.content}"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.core.widget.NestedScrollView>




        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay" >

            <ImageButton
                android:id="@+id/share_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_share_black_24dp"
                app:tint="@color/white"
                android:background="#00FFFFFF"
                android:layout_gravity="end"
                android:layout_marginEnd="16dp"
                android:padding="5dp"
                android:scaleType="fitCenter"
                android:onClick="onClick"
                android:foreground="@drawable/ripple_round"
                android:contentDescription="@string/share_button_content_description" />

            <ImageButton
                android:id="@+id/font_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_font_download_black_24dp"
                android:background="#00FFFFFF"
                android:layout_gravity="end"
                android:layout_marginEnd="16dp"
                android:padding="5dp"
                android:scaleType="fitCenter"
                android:onClick="onClick"
                android:foreground="@drawable/ripple_round"
                android:contentDescription="@string/adjust_font_size_content_description" />


            <ImageButton
                android:id="@+id/continue_website"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/website_logo"
                app:tint="@color/white"
                android:background="#00FFFFFF"
                android:layout_gravity="end"
                android:layout_marginEnd="16dp"
                android:padding="5dp"
                android:scaleType="fitCenter"
                android:onClick="onClick"
                android:foreground="@drawable/ripple_round"
                android:contentDescription="@string/share_button_content_description" />



        </androidx.appcompat.widget.Toolbar>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>